tests/snapshots/ui_picker__groups_19.snap
---
source: tests/ui_picker.rs
expression: "screen(&p, 100, 34)"
---
 restoric  Pick a host and path                                     rest:http://iridium:8000/dev-vm

   host         path                                                        snapshots  latest
 ▶ bege-laptop  ~/dev/project                                                       2  Sep 06 18:03
   dev-vm       /srv/data                                                           2  Sep 01 10:00
   old-laptop   ~                                                                   1  Mar 01 10:00



























 PICK  ⏎ open · / filter · q quit                                                               1/3
