tests/snapshots/ui_picker__groups_empty.snap
---
source: tests/ui_picker.rs
expression: "screen(&p, 80, 12)"
---
 restoric  Pick a host and path                 rest:http://iridium:8000/dev-vm

   No snapshots in this repository.








 PICK  ⏎ open · / filter · q quit                                           0/0
