tests/snapshots/ui_picker__groups_with_the_dead_end_message.snap
---
source: tests/ui_picker.rs
expression: "screen(&p, 100, 34)"
---
 restoric  Pick a host and path                                     rest:http://iridium:8000/dev-vm
 /home/bege/music isn't in any of this machine's snapshots.
 This machine backs up:
 /home/bege/dev/project

   host         path                                                        snapshots  latest
   bege-laptop  ~/dev/project                                                       2  Sep 06 18:03
   dev-vm       /srv/data                                                           2  Sep 01 10:00
 ▶ old-laptop   ~                                                                   1  Mar 01 10:00
























 PICK  ⏎ open · / filter · q quit                                                               3/3
