tests/snapshots/ui_picker__picking_a_file_opens_its_folder.snap
---
source: tests/ui_picker.rs
expression: "h.screen(100, 20)"
---
 restoric  dev-vm:~/dev/trading
  Oct 2026                                                                     on disk
  ●                                                                        ●  ┊ · trading.log
                                                                           ▲               − 1× +

 on disk  = latest    │ ○ orders.csv                    7 B    │ trading.log · v2/2      ⇥ content
▶Oct 08 09:03 ~1      │ ≡ trading.log                  15 B  ~ │ changed here · + new line · − remo…
 Oct 06 08:04 +2      │                                        │
                      │                                        │   1  started
                      │                                        │   2+ bought
                      │                                        │
                      │                                        │
                      │                                        │
                      │                                        │
                      │                                        │
                      │                                        │
                      │                                        │
                      │                                        │
                      │                                        │
 NOR  Oct 08 09:03  4f05cd40  trading/ ~1                                 Oct 08 09:03  2/2  ? help
