tests/snapshots/ui_picker__repos_refreshed.snap
---
source: tests/ui_picker.rs
expression: "screen(&p, 100, 12)"
---
 restoric  Pick a repository

   location                         hosts
   rest:http://iridium:8000/dev-vm  bege-laptop, dev-vm, old-laptop · read 3 h ago
   /mnt/photos                      nas · read 30 d ago
 ▶ sftp:nas:/backup                 bege-laptop





 PICK  ⏎ open · r refresh · q quit                                                              3/3
